# HWPointCloudProcess

./: CMakeLists.txt  LICENSE  README.md
demo/image_generator/: CMakeLists.txt  main_image_generator.cpp
demo/pointcloud_filter/: CMakeLists.txt  main_pointcloud_filter.cpp
demo/query_generator/: CMakeLists.txt  main_query_generator.cpp
docs/: 小物体重建算法说明文档.docx
src/: ArcBall.cpp  ArcBall.h  BaseModel.cpp  BaseModel.h  CMakeLists.txt  Geometry3D.h  HLBFGS.cpp  HLBFGS.h  HalfEdge.cpp  HalfEdge.h  ImageWindow.cpp  ImageWindow.h  LineModel.cpp  LineModel.h  ListWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  OpenGLWindow.cpp  OpenGLWindow.h  PCAFunctions.cpp  PCAFunctions.h  PlyFilter.cpp  PlyFilter.h  PointGrowAngleDis.cpp  PointGrowAngleDis.h  PointModel.cpp  PointModel.h  PolygonWindow.cpp  PolygonWindow.h  ScalableTSDFVolume.cpp  ScalableTSDFVolume.h  ScenePolygonsVertex.cpp  ScenePolygonsVertex.h  Shader.frag  Shader.vert  TSDFVolume.h  TriangleMesh.cpp  TriangleMesh.h  TriangleModel.cpp  TriangleModel.h  (+115 more)
src/CloudCompareDisplay/: AutoSegmentationTools.cpp  AutoSegmentationTools.h  CCToolbox.h  ChamferDistanceTransform.cpp  ChamferDistanceTransform.h  CloudSamplingTools.cpp  CloudSamplingTools.h  ConjugateGradient.h  Delaunay2dMesh.cpp  Delaunay2dMesh.h  DistanceComputationTools.cpp  DistanceComputationTools.h  ErrorFunction.cpp  ErrorFunction.h  FastMarching.cpp  FastMarching.h  FastMarchingForPropagation.cpp  FastMarchingForPropagation.h  Garbage.h  GenericDistribution.h  GenericIndexedCloudPersist.h  GenericIndexedMesh.h  GenericMesh.h  GenericOctree.h  GenericTriangle.h  GeometricalAnalysisTools.cpp  GeometricalAnalysisTools.h  Grid3D.h  KdTree.cpp  KdTree.h  ManualSegmentationTools.cpp  ManualSegmentationTools.h  MeshSamplingTools.cpp  MeshSamplingTools.h  Neighbourhood.cpp  Neighbourhood.h  NormalDistribution.cpp  NormalDistribution.h  PointCloud.h  PointProjectionTools.cpp  (+141 more)
src/CloudCompareDisplay/oculus/: ccOculus.h
src/CloudCompareDisplay/removed/: DgmOctree.cpp  DgmOctree.h  ReferenceCloud.h  ccEntityAction.cpp  ccEntityAction.h  ccGlobalShiftManager.cpp  ccPluginManager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tinyply.h
src/Common/: BoundingBox.cpp  BoundingBox.h  CCConst.h  CCGeom.h  CCMiscTools.h  CCShareable.h  DgmOctree.cpp  DgmOctree.h  DgmOctreeReferenceCloud.h  GenericCloud.h  GenericIndexedCloud.h  GenericIndexedCloudPersist.h  GenericProgressCallback.h  ReferenceCloud.h  ScalarField.cpp  ScalarField.h
src/dso_src/: AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  DatasetReader.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp  ImmaturePoint.cpp  IndexThreadReduce.h  MatrixAccumulators.h  NumType.h  PixelSelector.cpp  PixelSelector.h  PixelSelector_dso.cpp  PixelSelector_dso.h  ResidualProjections.h  Residuals.cpp  Residuals.h  SampleOutputWrapper.h  Undistort.cpp  globalCalib.h  globalFuncs.h  settings_dso.cpp  settings_dso.h
src/hw_sfm/: hw_ba_camera_pose.h  hw_ba_dense_vector.h  hw_ba_sparse_matrix.h  hw_ba_types.h  hw_bundle_adjustment.cpp  hw_bundle_adjustment.h  hw_bundle_defines.h  hw_bundle_matching.cpp  hw_bundle_matching.h  hw_bundler_common.cpp  hw_bundler_common.h  hw_bundler_incremental.cpp  hw_bundler_incremental.h  hw_bundler_scene.cpp  hw_bundler_scene.h  hw_bundler_tracks.cpp  hw_bundler_tracks.h  hw_correspondence.h  hw_feature_set.cpp  hw_feature_set.h  hw_features_detect_wrapper.cpp  hw_features_detect_wrapper.h
src/meshing/: clustering_decimation.cpp  clustering_decimation.h  hw_simp.cpp  hw_simp.h  quadric_simp.cpp  quadric_simp.h
